[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemDataPut.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemDataPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/inventory_editor/icons/Add.png" type="Texture" id=3]
[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemData.gd" type="Script" id=4]
[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemDataProperty.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/inventory_editor/icons/Item.png" type="Texture" id=6]
[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemDataPutScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/inventory_editor/scenes/InventoryItemDataPathScene.tscn" type="PackedScene" id=8]

[node name="InventoryItemData" type="HBoxContainer"]
margin_left = 221.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginData" type="MarginContainer" parent="."]
margin_right = 399.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginData"]
margin_right = 399.0
margin_bottom = 600.0

[node name="HBoxStack" type="HBoxContainer" parent="MarginData/VBox"]
margin_right = 399.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxStack"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Stacksize"

[node name="Stacksize" type="LineEdit" parent="MarginData/VBox/HBoxStack"]
margin_left = 104.0
margin_right = 399.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxIcon" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 28.0
margin_right = 399.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxIcon"]
margin_top = 8.0
margin_right = 76.0
margin_bottom = 22.0
rect_min_size = Vector2( 76, 0 )
text = "Icon"

[node name="Put" parent="MarginData/VBox/HBoxIcon" instance=ExtResource( 1 )]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 30.0

[node name="Icon" parent="MarginData/VBox/HBoxIcon" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 0.0
margin_right = 399.0
margin_bottom = 30.0

[node name="HBoxScene" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 62.0
margin_right = 399.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="MarginData/VBox/HBoxScene"]
margin_top = 8.0
margin_right = 76.0
margin_bottom = 22.0
rect_min_size = Vector2( 76, 0 )
text = "Scene"

[node name="PutScene" parent="MarginData/VBox/HBoxScene" instance=ExtResource( 7 )]
margin_left = 80.0
margin_right = 100.0
margin_bottom = 30.0

[node name="Scene" parent="MarginData/VBox/HBoxScene" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 0.0
margin_right = 399.0
margin_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 96.0
margin_right = 399.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxAdd" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 105.0
margin_right = 399.0
margin_bottom = 125.0

[node name="Add" type="Button" parent="MarginData/VBox/HBoxAdd"]
margin_right = 22.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
icon = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginData/VBox/HBoxAdd"]
margin_left = 26.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 17.0
text = "Properties"

[node name="HBoxNames" type="HBoxContainer" parent="MarginData/VBox"]
margin_top = 129.0
margin_right = 399.0
margin_bottom = 143.0

[node name="Name" type="Label" parent="MarginData/VBox/HBoxNames"]
margin_right = 197.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="Value" type="Label" parent="MarginData/VBox/HBoxNames"]
margin_left = 201.0
margin_right = 399.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Value"

[node name="HSeparator" type="HSeparator" parent="MarginData/VBox"]
margin_top = 147.0
margin_right = 399.0
margin_bottom = 151.0

[node name="VBoxProperties" type="VBoxContainer" parent="MarginData/VBox"]
margin_top = 155.0
margin_right = 399.0
margin_bottom = 185.0

[node name="InventoryItemDataProperty" parent="MarginData/VBox/VBoxProperties" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 399.0
margin_bottom = 30.0

[node name="MarginPreview" type="MarginContainer" parent="."]
margin_left = 403.0
margin_right = 803.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginPreview"]
margin_right = 400.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="MarginPreview/VBox"]
margin_right = 400.0
margin_bottom = 14.0
text = "Preview"
align = 1

[node name="Texture" type="TextureRect" parent="MarginPreview/VBox"]
margin_top = 18.0
margin_right = 400.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 6
